--- a/data-liga/index.html
+++ b/data-liga/index.html
@@ -8,8 +8,6 @@
     <meta name="description" content="Aplikasi Football League" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="apple-touch-icon" href="/img/logo/logo_192.png" />
-
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Antic|Raleway:300"
@@ -20,6 +18,8 @@
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#3F51B5" />
+
+    <link rel="apple-touch-icon" href="/img/logo/logo_192.png" />
   </head>
   <body>
     <nav class="navcolor" role="navigation">
@@ -27,8 +27,8 @@
         <a href="#" class="brand-logo" id="logo-container">
           <img src="img/logo/logo.svg" />
           <span>
-            <span>Football</span>
-            <span>League</span>
+            <span><b>FOOTBALL</b></span>
+            <span><b>LEAGUE</b></span>
           </span>
         </a>
         <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
@@ -40,8 +40,12 @@
 
     <div id="body-content"></div>
     <script src="js/materialize.min.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+    <script src="js/idb.js"></script>
+    <script src="js/dbhelper.js"></script>
     <!-- REGISTER SERVICE WORKER -->
     <script src="js/app.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
