--- a/data-liga/pages/matches.html
+++ b/data-liga/pages/matches.html
@@ -1,26 +1,4 @@
-<div id="services">
-  <div class="sectionhead">
-    <h3>This is what I can do for you</h3>
-    <hr class="separetor" />
-  </div>
-
-  <div class="row grid">
-    <div class="col s4">
-      <img class="responsive-img" src="img/s2.webp" alt="Android Service" />
-      <h4>Android App</h4>
-      <p>ECommerce Apps, Travels Apps, PPOB Apps, and many more.</p>
-    </div>
-
-    <div class="col s4">
-      <img class="responsive-img" src="img/s3.webp" alt="Android Design" />
-      <h4>Android Design</h4>
-      <p>Apps design, mockups, and many more.</p>
-    </div>
-
-    <div class="col s4">
-      <img class="responsive-img" src="img/s1.webp" alt="IOS Service" />
-      <h4>IOS App</h4>
-      <p>Coming Soon.</p>
-    </div>
-  </div>
+<div class="main-wrapper container">
+  <h1 class="title-favorite"><b>Premier League Matches</b></h1>
+  <div id="data-matches" class="row"></div>
 </div>
