--- a/data-liga/pages/matches.html
+++ b/data-liga/pages/matches.html
@@ -1,4 +1,4 @@
 <div class="main-wrapper container">
-  <h1 class="title-favorite"><b>Premier League Matches</b></h1>
+  <h1 class="title-matches">Premier League Matches</h1>
   <div id="data-matches" class="row"></div>
 </div>
