--- a/data-liga/pages/standings.html
+++ b/data-liga/pages/standings.html
@@ -1,9 +1,7 @@
 <div class="main-wrapper container">
   <div class="card row">
     <div class="col s12 main-standings">
-      <div class="title-standings">
-        <p><b>Premier League</b></p>
-      </div>
+      <div class="title-standings"><p>Premier League</p></div>
       <div class="body-standings">
         <table>
           <thead>
@@ -19,7 +17,7 @@
             <th>Poin</th>
           </thead>
           <tbody id="data-standings">
-            <td colspan="12" class="loading"><b>Loading...</b></td>
+            <td colspan="12" class="loading">Loading...</td>
           </tbody>
         </table>
       </div>
