--- a/data-liga/pages/detailtim.html
+++ b/data-liga/pages/detailtim.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper container">
   <div class="card team-card">
     <div id="info-detail" class="team-card-title">
-      <p class="loading"><b>Loading...</b></p>
+      <p class="loading">Loading...</p>
     </div>
     <div class="team-card-table">
       <table>
@@ -14,7 +14,7 @@
           <th>Nationality</th>
         </thead>
         <tbody id="squad-team">
-          <td colspan="12" class="loading"><b>Loading...</b></td>
+          <td colspan="12" class="loading">Loading...</td>
         </tbody>
       </table>
     </div>
