--- a/data-liga/pages/favorites.html
+++ b/data-liga/pages/favorites.html
@@ -1,4 +1,4 @@
 <div class="main-wrapper container">
-  <h1 class="title-favorite"><b>Favorite Teams</b></h1>
+  <h1 class="title-favorite">Favorite Teams</h1>
   <div id="data-favorite" class="card team-card favorite-team-card"></div>
 </div>
