--- a/data-liga/pages/standings.html
+++ b/data-liga/pages/standings.html
@@ -1,7 +1,9 @@
 <div class="main-wrapper container">
   <div class="card row">
     <div class="col s12 main-standings">
-      <div class="title-standings"><p>Premier League</p></div>
+      <div id="title-standing" class="title-standings">
+      </div>
+      <div id="change-standings" class="change-league"></div>
       <div class="body-standings">
         <table>
           <thead>
