--- a/data-liga/detailteam.html
+++ b/data-liga/detailteam.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Antic|Raleway:300"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
     <title>Football League</title>
 
@@ -35,8 +39,9 @@
             <span>LEAGUE</span>
           </span>
         </a>
-        <a href="#" class="sidenav-trigger" data-target="nav-mobile">☰</a>
-
+        <a href="./index.html" class="sidenav-trigger" data-target="nav-mobile">
+          <i class="material-icons">arrow_back</i>
+        </a>
         <ul class="topnav right hide-on-med-and-down"></ul>
         <ul class="sidenav" id="nav-mobile"></ul>
       </div>
@@ -50,6 +55,20 @@
     <!-- REGISTER SERVICE WORKER -->
     <script src="js/app.js"></script>
     <script src="js/api.js"></script>
-    <script src="js/nav.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        favoritePromise()
+          .then(function(item) {
+            return (item = loadTeamInfo());
+          })
+          .then(function(item) {
+            loadFavorite(item);
+            stateFavorite(item.id);
+          })
+          .catch(function(e) {
+            console.log(e);
+          });
+      });
+    </script>
   </body>
 </html>
